--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -168,6 +168,23 @@
           opacity: 0.4;
         }
       }
+
+      &.selected {
+        cursor: pointer;
+        color: lighten($color-success, 40%);
+
+        &::after {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background: $color-success;
+          border: 3px;
+          opacity: 0.4;
+        }
+      }
     }
 
     [data-table="1"] {
